--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,14 +1,13 @@
 // import bootstrap to Sass
-
 @import '../../node_modules/bootstrap/scss/bootstrap.scss';
 
 // Abstracts
-
 @import './abstracts/variables';
+@import './abstracts/mixins';
 
 // components
-
 @import './components/product-card';
+@import './components/navbar';
 
 // pages
 @import './pages/home';
